# QT_Chat

client/: client.pro  clientwindow.cpp  clientwindow.h  clientwindow.ui  main.cpp
client_2-2/: client_2-2.pro  header.h  main.cpp
server/: CMakeLists.txt  clientconnection.cpp  clientconnection.h  main.cpp  server.cpp  server.h  server.pro
